# turntables

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/menu/: container.rs  list.rs  mod.rs  style.rs  table.rs  terminal_list.rs
src/widgets/: list.rs  mod.rs  table.rs  traits.rs
