[package]
name = "turntables"
version = "0.1.0"
edition = "2021"
description = "A simple, minimalist framework for recursive TUI tables"
readme = "README.md"
repository = "https://github.com/lavafroth/turntables"
license = "GPL-3.0-or-later"
keywords = ["tui", "cli", "tables"]
include = [
    "**/*.rs",
    "tests",
    "Cargo.toml",
]

[dependencies]
crossterm = "0.29.0"
lazy_static = "1.4.0"
tui = "0.19.0"
